[gd_scene load_steps=3 format=3 uid="uid://bm8xkbphah7sv"]

[ext_resource type="Script" path="res://scripts/ui/win_popup.gd" id="1_8d536"]
[ext_resource type="FontFile" uid="uid://bcf67jwh7668c" path="res://assets/InterTight-Light.ttf" id="1_gwqe4"]

[node name="WinPopup" type="CanvasLayer"]
script = ExtResource("1_8d536")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1090.5
offset_top = -613.5
offset_right = 1090.5
offset_bottom = 613.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 713.0
offset_top = 146.0
offset_right = 1468.0
offset_bottom = 778.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_gwqe4")
theme_override_font_sizes/font_size = 128
text = "You won!"

[node name="ShotsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Shots: 0"

[node name="AccuracyLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Accuracy: 0"

[node name="TotalScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Total score: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -661.0
offset_top = -310.0
offset_right = 661.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40

[node name="NextLevelButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Next Level"

[node name="RetryButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Retry"

[node name="LevelSelectButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Level Select"

[connection signal="pressed" from="Panel/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
